java/src/main/java/cpj/grammar/cpj/grammar/CPJParser.java
// Generated from cpj/grammar/CPJ.g4 by ANTLR 4.13.2
package cpj.grammar.cpj.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CPJParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, TYPE_KW=4, ARROW=5, ON=6, FROM=7, DO=8, NEWLINE=9, 
		INDENT=10, DEDENT=11, LPAREN=12, RPAREN=13, COLON=14, COMMA=15, LBRACE=16, 
		RBRACE=17, DOT=18, PLUS=19, MINUS=20, STAR=21, DIV=22, MOD=23, POW=24, 
		TILDE=25, LT=26, GT=27, LE=28, GE=29, EQ=30, NEQ=31, LSHIFT=32, RSHIFT=33, 
		BITOR=34, BITXOR=35, BITAND=36, DEF=37, GUI_CAP=38, GUI_KW=39, TYPES_KW=40, 
		ADD_TEXT=41, ADD_BTN=42, ADD_CHECK=43, ADD_SLIDER=44, OR=45, AND=46, IN=47, 
		IS=48, TRUE=49, FALSE=50, NULL=51, Float=52, Integer=53, StringLiteral=54, 
		Identifier=55, COMMENT=56, WS=57;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_eventHandler = 2, RULE_typeDef = 3, 
		RULE_typeFieldList = 4, RULE_typeField = 5, RULE_funcDef = 6, RULE_paramList = 7, 
		RULE_param = 8, RULE_suite = 9, RULE_simpleStmt = 10, RULE_exprStmt = 11, 
		RULE_guiBlock = 12, RULE_guiBody = 13, RULE_guiProp = 14, RULE_typesLine = 15, 
		RULE_typesTokens = 16, RULE_typesDict = 17, RULE_typeEntries = 18, RULE_typeLine = 19, 
		RULE_typeEntry = 20, RULE_widgetStmt = 21, RULE_args = 22, RULE_arg = 23, 
		RULE_exprNoNewline = 24, RULE_expression = 25, RULE_lambdaExpr = 26, RULE_logicalOr = 27, 
		RULE_logicalAnd = 28, RULE_equality = 29, RULE_comparison = 30, RULE_bitwiseOr = 31, 
		RULE_bitwiseXor = 32, RULE_bitwiseAnd = 33, RULE_shift = 34, RULE_sum = 35, 
		RULE_term = 36, RULE_factor = 37, RULE_power = 38, RULE_atom = 39, RULE_argList = 40, 
		RULE_callStmt = 41, RULE_dottedName = 42, RULE_literal = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "eventHandler", "typeDef", "typeFieldList", "typeField", 
			"funcDef", "paramList", "param", "suite", "simpleStmt", "exprStmt", "guiBlock", 
			"guiBody", "guiProp", "typesLine", "typesTokens", "typesDict", "typeEntries", 
			"typeLine", "typeEntry", "widgetStmt", "args", "arg", "exprNoNewline", 
			"expression", "lambdaExpr", "logicalOr", "logicalAnd", "equality", "comparison", 
			"bitwiseOr", "bitwiseXor", "bitwiseAnd", "shift", "sum", "term", "factor", 
			"power", "atom", "argList", "callStmt", "dottedName", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'or'", "'and'", null, "'->'", null, null, null, null, "'<INDENT>'", 
			"'<DEDENT>'", "'('", "')'", "':'", "','", "'{'", "'}'", "'.'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'**'", "'~'", "'<'", "'>'", "'<='", "'>='", 
			"'=='", "'!='", "'<<'", "'>>'", "'|'", "'^'", "'&'", null, "'GUI'", null, 
			null, "'addTextField'", "'addButton'", "'addCheckBox'", "'addSlider'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "TYPE_KW", "ARROW", "ON", "FROM", "DO", "NEWLINE", 
			"INDENT", "DEDENT", "LPAREN", "RPAREN", "COLON", "COMMA", "LBRACE", "RBRACE", 
			"DOT", "PLUS", "MINUS", "STAR", "DIV", "MOD", "POW", "TILDE", "LT", "GT", 
			"LE", "GE", "EQ", "NEQ", "LSHIFT", "RSHIFT", "BITOR", "BITXOR", "BITAND", 
			"DEF", "GUI_CAP", "GUI_KW", "TYPES_KW", "ADD_TEXT", "ADD_BTN", "ADD_CHECK", 
			"ADD_SLIDER", "OR", "AND", "IN", "IS", "TRUE", "FALSE", "NULL", "Float", 
			"Integer", "StringLiteral", "Identifier", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CPJ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CPJParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CPJParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CPJParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CPJParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 71495606192312912L) != 0)) {
				{
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TYPE_KW:
				case ON:
				case LPAREN:
				case PLUS:
				case MINUS:
				case TILDE:
				case DEF:
				case GUI_CAP:
				case GUI_KW:
				case TRUE:
				case FALSE:
				case NULL:
				case Float:
				case Integer:
				case StringLiteral:
				case Identifier:
					{
					setState(88);
					statement();
					}
					break;
				case NEWLINE:
					{
					setState(89);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public GuiBlockContext guiBlock() {
			return getRuleContext(GuiBlockContext.class,0);
		}
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public EventHandlerContext eventHandler() {
			return getRuleContext(EventHandlerContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GUI_CAP:
			case GUI_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				guiBlock();
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				funcDef();
				}
				break;
			case TYPE_KW:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				typeDef();
				}
				break;
			case ON:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				eventHandler();
				}
				break;
			case LPAREN:
			case PLUS:
			case MINUS:
			case TILDE:
			case TRUE:
			case FALSE:
			case NULL:
			case Float:
			case Integer:
			case StringLiteral:
			case Identifier:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				exprStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EventHandlerContext extends ParserRuleContext {
		public Token eventName;
		public Token source;
		public TerminalNode ON() { return getToken(CPJParser.ON, 0); }
		public TerminalNode DO() { return getToken(CPJParser.DO, 0); }
		public TerminalNode COLON() { return getToken(CPJParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(CPJParser.NEWLINE, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public List<TerminalNode> Identifier() { return getTokens(CPJParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CPJParser.Identifier, i);
		}
		public TerminalNode FROM() { return getToken(CPJParser.FROM, 0); }
		public EventHandlerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventHandler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterEventHandler(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitEventHandler(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitEventHandler(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventHandlerContext eventHandler() throws RecognitionException {
		EventHandlerContext _localctx = new EventHandlerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eventHandler);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(ON);
			setState(105);
			((EventHandlerContext)_localctx).eventName = match(Identifier);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(106);
				match(FROM);
				setState(107);
				((EventHandlerContext)_localctx).source = match(Identifier);
				}
			}

			setState(110);
			match(DO);
			setState(111);
			match(COLON);
			setState(112);
			match(NEWLINE);
			setState(113);
			suite();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefContext extends ParserRuleContext {
		public TerminalNode TYPE_KW() { return getToken(CPJParser.TYPE_KW, 0); }
		public TerminalNode Identifier() { return getToken(CPJParser.Identifier, 0); }
		public TerminalNode LBRACE() { return getToken(CPJParser.LBRACE, 0); }
		public TypeFieldListContext typeFieldList() {
			return getRuleContext(TypeFieldListContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CPJParser.RBRACE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(CPJParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CPJParser.NEWLINE, i);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitTypeDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitTypeDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(TYPE_KW);
			setState(116);
			match(Identifier);
			setState(117);
			match(LBRACE);
			setState(118);
			typeFieldList();
			setState(119);
			match(RBRACE);
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(120);
					match(NEWLINE);
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeFieldListContext extends ParserRuleContext {
		public List<TypeFieldContext> typeField() {
			return getRuleContexts(TypeFieldContext.class);
		}
		public TypeFieldContext typeField(int i) {
			return getRuleContext(TypeFieldContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CPJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CPJParser.COMMA, i);
		}
		public TypeFieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeFieldList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterTypeFieldList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitTypeFieldList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitTypeFieldList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeFieldListContext typeFieldList() throws RecognitionException {
		TypeFieldListContext _localctx = new TypeFieldListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeFieldList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			typeField();
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					match(COMMA);
					setState(128);
					typeField();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(134);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeFieldContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(CPJParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CPJParser.Identifier, i);
		}
		public TerminalNode COLON() { return getToken(CPJParser.COLON, 0); }
		public TypeFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterTypeField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitTypeField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitTypeField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeFieldContext typeField() throws RecognitionException {
		TypeFieldContext _localctx = new TypeFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(Identifier);
			setState(138);
			match(COLON);
			setState(139);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(CPJParser.DEF, 0); }
		public List<TerminalNode> Identifier() { return getTokens(CPJParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CPJParser.Identifier, i);
		}
		public TerminalNode LPAREN() { return getToken(CPJParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CPJParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(CPJParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(CPJParser.NEWLINE, 0); }
		public SuiteContext suite() {
			return getRuleContext(SuiteContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(CPJParser.ARROW, 0); }
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(DEF);
			setState(142);
			match(Identifier);
			setState(143);
			match(LPAREN);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(144);
				paramList();
				}
			}

			setState(147);
			match(RPAREN);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(148);
				match(ARROW);
				setState(149);
				match(Identifier);
				}
			}

			setState(152);
			match(COLON);
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEWLINE:
				{
				setState(153);
				match(NEWLINE);
				setState(154);
				suite();
				}
				break;
			case INDENT:
			case LPAREN:
			case PLUS:
			case MINUS:
			case TILDE:
			case TRUE:
			case FALSE:
			case NULL:
			case Float:
			case Integer:
			case StringLiteral:
			case Identifier:
				{
				setState(155);
				suite();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CPJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CPJParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPJListener ) ((CPJListener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPJVisitor ) return ((CPJVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			param();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(159);
				match(COMMA);
				setState(160);
				param();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
